--- a/readMe
+++ b/readMe
@@ -35,8 +35,16 @@ npm install
         -Dans la section Overview cliquez sur le bouton "Connect"
         -Séléctionnez la méthode "Drivers"
         -Copiez la "connection string" (URI de connection)
-    7. Dans la racine du projet, créez un fichier **.env** et collez l'URI de connection dans le fichier :
+    7. Dans le dossier server, créez un fichier **.env** et collez l'URI de connection dans le fichier :
     ( exemple de .env : 
     DATABASE_URI = mongodb+srv://<db_username>:<db_password>@cluster0.aw79ejg.mongodb.net/<db_name>?retryWrites=true&w=majority&appName=Cluster0 )
     
-**ATTENTION**, 
+**ATTENTION** changez <db_username>, <db_password> en accordance avec votre utilisateur et <db_name> par TheAtlasDB
+
+Gardez aussi la variable DATABASE_URI nommer comme tel pour évitez les soucis dans le code.
+
+
+4. Lancer le projet :
+    1. Dans le dossier "client", ouvrez le terminal et rentrez : npm start (se lance par défaut sur le port 3000)
+    2. Dans le dossier "server", ouvrez le terminal et rentrez : npm run dev (se lance sur le port 3500)
+
